--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -50,6 +50,7 @@
         app:layout_constraintTop_toBottomOf="@id/petsup_icon" />
 
     <ScrollView
+        android:id="@+id/scroll_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintStart_toStartOf="parent"
@@ -61,7 +62,8 @@
             android:layout_width="match_parent"
             android:layout_height="104dp"
             android:layout_marginHorizontal="17dp"
-            android:layout_marginVertical="16dp">
+            android:layout_marginVertical="16dp"
+            android:minHeight="104dp">
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
@@ -69,9 +71,10 @@
 
                 <ImageView
                     android:id="@+id/pet_shop_icon_1"
-                    android:layout_width="88dp"
-                    android:layout_height="96dp"
-                    android:layout_marginVertical="8dp"
+                    android:layout_width="80dp"
+                    android:layout_height="80dp"
+                    android:layout_marginStart="8dp"
+                    android:layout_marginTop="12dp"
                     android:src="@drawable/petshop_icon"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
@@ -81,7 +84,8 @@
                     style="@style/default_title_text_view"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginVertical="8dp"
+                    android:layout_marginStart="8dp"
+                    android:layout_marginTop="8dp"
                     android:text="Fofinho Pet shop"
                     app:layout_constraintStart_toEndOf="@id/pet_shop_icon_1"
                     app:layout_constraintTop_toTopOf="parent" />
@@ -92,7 +96,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Cerqueira César, São Paulo"
-                    app:layout_constraintStart_toEndOf="@id/pet_shop_icon_1"
+                    app:layout_constraintStart_toStartOf="@id/card_title_1"
                     app:layout_constraintTop_toBottomOf="@id/card_title_1" />
 
                 <TextView
@@ -101,7 +105,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/services"
-                    app:layout_constraintStart_toEndOf="@id/pet_shop_icon_1"
+                    app:layout_constraintStart_toStartOf="@id/card_location_1"
                     app:layout_constraintTop_toBottomOf="@id/card_location_1" />
 
                 <TextView
@@ -110,7 +114,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/status_open"
-                    app:layout_constraintStart_toEndOf="@id/pet_shop_icon_1"
+                    app:layout_constraintStart_toStartOf="@id/card_services_1"
                     app:layout_constraintTop_toBottomOf="@id/card_services_1" />
 
                 <ImageView
