--- a/app/src/main/res/layout/activity_profile_data.xml
+++ b/app/src/main/res/layout/activity_profile_data.xml
@@ -29,6 +29,7 @@
         android:text="@string/save" />
 
     <ScrollView
+        android:id="@+id/scroll_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/profile_icon">
@@ -42,8 +43,8 @@
                 style="@style/default_forms_text_view"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignParentTop="true"
                 android:layout_alignStart="@id/name_edit_text"
+                android:layout_alignParentTop="true"
                 android:text="@string/name" />
 
             <EditText
