--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,6 +31,7 @@
         style="@style/main_action_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:onClick="navigateToLogin"
         android:text="@string/login" />
 
     <Button
@@ -38,6 +39,7 @@
         style="@style/main_action_alternate_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:onClick="navigateToSignup"
         android:text="CADASTRE-SE" />
 
 </LinearLayout>
