feat: scroll views adicionadas em telas com EditText para resolver problema de sobreposição do teclado

--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -18,112 +18,125 @@
         android:layout_marginTop="20dp"
         android:src="@drawable/petsup_icon" />
 
-    <TextView
-        android:id="@+id/title_signup_text_view"
-        style="@style/default_title_text_view"
-        android:layout_width="wrap_content"
+    <ScrollView
+        android:id="@+id/scroll_view"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/petsup_icon"
-        android:layout_centerHorizontal="true"
-        android:layout_marginVertical="16dp"
-        android:text="Faça seu cadastro" />
+        android:layout_below="@id/petsup_icon">
 
-    <TextView
-        android:id="@+id/forms_name_text_view"
-        style="@style/default_forms_text_view"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/title_signup_text_view"
-        android:layout_alignStart="@id/name_edit_text"
-        android:text="@string/name" />
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
-    <EditText
-        android:id="@+id/name_edit_text"
-        style="@style/default_edit_text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/forms_name_text_view"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="16dp"
-        android:background="@drawable/default_edit_text_background"
-        android:hint="Digite seu nome aqui" />
+            <TextView
+                android:id="@+id/title_signup_text_view"
+                style="@style/default_title_text_view"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:layout_marginVertical="16dp"
+                android:text="Faça seu cadastro" />
 
-    <TextView
-        android:id="@+id/forms_email_text_view"
-        style="@style/default_forms_text_view"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/name_edit_text"
-        android:layout_alignStart="@id/name_edit_text"
-        android:text="@string/email" />
+            <TextView
+                android:id="@+id/forms_name_text_view"
+                style="@style/default_forms_text_view"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/title_signup_text_view"
+                android:layout_alignStart="@id/name_edit_text"
+                android:text="@string/name" />
 
-    <EditText
-        android:id="@+id/email_edit_text"
-        style="@style/default_edit_text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/forms_email_text_view"
-        android:layout_alignStart="@id/forms_email_text_view"
-        android:layout_marginBottom="16dp"
-        android:background="@drawable/default_edit_text_background"
-        android:hint="Digite seu e-mail aqui" />
+            <EditText
+                android:id="@+id/name_edit_text"
+                style="@style/default_edit_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/forms_name_text_view"
+                android:layout_centerHorizontal="true"
+                android:layout_marginBottom="16dp"
+                android:background="@drawable/default_edit_text_background"
+                android:hint="Digite seu nome aqui" />
 
-    <TextView
-        android:id="@+id/forms_password_text_view"
-        style="@style/default_forms_text_view"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/email_edit_text"
-        android:layout_alignStart="@id/email_edit_text"
-        android:text="@string/password" />
+            <TextView
+                android:id="@+id/forms_email_text_view"
+                style="@style/default_forms_text_view"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/name_edit_text"
+                android:layout_alignStart="@id/name_edit_text"
+                android:text="@string/email" />
 
-    <EditText
-        android:id="@+id/password_edit_text"
-        style="@style/default_edit_text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/forms_password_text_view"
-        android:layout_alignStart="@id/forms_password_text_view"
-        android:layout_marginBottom="16dp"
-        android:background="@drawable/default_edit_text_background"
-        android:hint="@string/hidden_password" />
+            <EditText
+                android:id="@+id/email_edit_text"
+                style="@style/default_edit_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/forms_email_text_view"
+                android:layout_alignStart="@id/forms_email_text_view"
+                android:layout_marginBottom="16dp"
+                android:background="@drawable/default_edit_text_background"
+                android:hint="Digite seu e-mail aqui" />
 
-    <TextView
-        android:id="@+id/forms_password_confirmation_text_view"
-        style="@style/default_forms_text_view"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/password_edit_text"
-        android:layout_alignStart="@id/password_edit_text"
-        android:text="Confirmar senha" />
+            <TextView
+                android:id="@+id/forms_password_text_view"
+                style="@style/default_forms_text_view"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/email_edit_text"
+                android:layout_alignStart="@id/email_edit_text"
+                android:text="@string/password" />
 
-    <EditText
-        android:id="@+id/password_confirmation_edit_text"
-        style="@style/default_edit_text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/forms_password_confirmation_text_view"
-        android:layout_alignStart="@id/forms_password_confirmation_text_view"
-        android:layout_marginBottom="16dp"
-        android:background="@drawable/default_edit_text_background"
-        android:hint="@string/hidden_password" />
+            <EditText
+                android:id="@+id/password_edit_text"
+                style="@style/default_edit_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/forms_password_text_view"
+                android:layout_alignStart="@id/forms_password_text_view"
+                android:layout_marginBottom="16dp"
+                android:background="@drawable/default_edit_text_background"
+                android:hint="@string/hidden_password" />
 
-    <Button
-        android:id="@+id/signup_button"
-        style="@style/main_action_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/password_confirmation_edit_text"
-        android:layout_alignStart="@id/password_confirmation_edit_text"
-        android:text="@string/signup" />
+            <TextView
+                android:id="@+id/forms_password_confirmation_text_view"
+                style="@style/default_forms_text_view"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/password_edit_text"
+                android:layout_alignStart="@id/password_edit_text"
+                android:text="Confirmar senha" />
 
-    <Button
-        android:id="@+id/redirect_to_login_button"
-        style="@style/secondary_action_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/signup_button"
-        android:layout_alignStart="@id/signup_button"
-        android:text="Já possuo cadastro" />
+            <EditText
+                android:id="@+id/password_confirmation_edit_text"
+                style="@style/default_edit_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/forms_password_confirmation_text_view"
+                android:layout_alignStart="@id/forms_password_confirmation_text_view"
+                android:layout_marginBottom="16dp"
+                android:background="@drawable/default_edit_text_background"
+                android:hint="@string/hidden_password" />
+
+            <Button
+                android:id="@+id/signup_button"
+                style="@style/main_action_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/password_confirmation_edit_text"
+                android:layout_alignStart="@id/password_confirmation_edit_text"
+                android:text="@string/signup" />
+
+            <Button
+                android:id="@+id/redirect_to_login_button"
+                style="@style/secondary_action_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/signup_button"
+                android:layout_alignStart="@id/signup_button"
+                android:text="Já possuo cadastro" />
+
+        </RelativeLayout>
+
+    </ScrollView>
 
 </RelativeLayout>
