--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -110,6 +110,7 @@
     <style name="default_edit_text">
         <item name="android:padding">8dp</item>
         <item name="android:width">328dp</item>
+        <item name="android:height">40dp</item>
         <item name="android:textSize">16sp</item>
         <item name="android:fontFamily">@font/signika</item>
         <item name="android:textColor">@color/dark_gray</item>
