--- a/app/src/main/res/layout/activity_pet_gender.xml
+++ b/app/src/main/res/layout/activity_pet_gender.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <ImageView
+    <ImageButton
         android:id="@+id/arrow_back"
         style="@style/arrow_back_style"
         android:layout_width="wrap_content"
@@ -17,7 +17,7 @@
         style="@style/purple_subtitle_text_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="160dp"
+        android:layout_marginTop="152dp"
         android:text="Selecione o sexo do seu pet"
         android:textAlignment="center"
         app:layout_constraintStart_toStartOf="parent"
