--- a/app/src/main/res/layout/activity_petshop_detail.xml
+++ b/app/src/main/res/layout/activity_petshop_detail.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <ImageView
+    <ImageButton
         android:id="@+id/arrow_back"
         style="@style/arrow_back_style"
         android:layout_width="wrap_content"
@@ -17,7 +17,6 @@
         android:layout_width="120dp"
         android:layout_height="120dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
         android:src="@drawable/petshop_icon"
         app:layout_constraintStart_toStartOf="@id/arrow_back"
         app:layout_constraintTop_toBottomOf="@id/arrow_back" />
