--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -233,9 +233,10 @@
     </style>
 
     <style name="arrow_back_style">
-        <item name="android:layout_marginStart">10dp</item>
+        <item name="android:layout_marginStart">8dp</item>
         <item name="android:layout_marginTop">24dp</item>
         <item name="android:src">@drawable/arrow_back</item>
+        <item name="backgroundTint">@color/white</item>
     </style>
 
     <style name="close_icon_style">
