feat: correção dos botões de arrow back e close

--- a/app/src/main/res/layout/activity_booking_success.xml
+++ b/app/src/main/res/layout/activity_booking_success.xml
@@ -3,11 +3,11 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <ImageView
+    <ImageButton
         android:id="@+id/close_button"
         style="@style/close_icon_style"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_alignParentEnd="true" />
 
     <LinearLayout
