--- a/app/src/main/res/layout/activity_booking_error.xml
+++ b/app/src/main/res/layout/activity_booking_error.xml
@@ -3,17 +3,17 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <ImageView
+    <ImageButton
         android:id="@+id/arrow_back"
         style="@style/arrow_back_style"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
-    <ImageView
+    <ImageButton
         android:id="@+id/close_button"
         style="@style/close_icon_style"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
+        android:layout_width="wrap_content"
+        android:layout_height="56dp"
         android:layout_alignParentEnd="true" />
 
     <LinearLayout
