--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -240,9 +240,10 @@
     </style>
 
     <style name="close_icon_style">
-        <item name="android:layout_marginTop">20dp</item>
+        <item name="android:layout_marginTop">24dp</item>
         <item name="android:layout_marginEnd">10dp</item>
         <item name="android:src">@drawable/baseline_close_24</item>
+        <item name="backgroundTint">@color/white</item>
     </style>
 
     <style name="booking_closing_icon">
