--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -7,9 +7,9 @@
     <ImageButton
         android:id="@+id/arrow_back"
         style="@style/arrow_back_style"
-        android:onClick="backToMain"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:onClick="backToMain" />
 
     <ImageView
         android:id="@+id/petsup_icon"
@@ -125,6 +125,7 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@id/password_confirmation_edit_text"
                 android:layout_alignStart="@id/password_confirmation_edit_text"
+                android:onClick="signup"
                 android:text="@string/signup" />
 
             <Button
