--- a/app/src/main/res/menu/menu_item.xml
+++ b/app/src/main/res/menu/menu_item.xml
@@ -4,6 +4,7 @@
     <item
         android:id="@+id/home_button"
         android:icon="@drawable/baseline_home_24"
+        android:onClick="navigateToHome"
         android:title="@string/home" />
 
     <item
@@ -14,15 +15,18 @@
     <item
         android:id="@+id/my_pets_button"
         android:icon="@drawable/baseline_pets_24"
+        android:onClick="navigateToMyPets"
         android:title="@string/mypets" />
 
     <item
         android:id="@+id/calendar_button"
         android:icon="@drawable/baseline_calendar_month_24"
+        android:onClick="navigateToBookingList"
         android:title="@string/agenda" />
 
     <item
         android:id="@+id/profile_button"
         android:icon="@drawable/baseline_person_24"
+        android:onClick="navigateToProfile"
         android:title="@string/profile" />
 </menu>
