--- a/app/src/main/res/layout/activity_pet_gender.xml
+++ b/app/src/main/res/layout/activity_pet_gender.xml
@@ -9,6 +9,7 @@
         style="@style/arrow_back_style"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:onClick="back"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -93,6 +94,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
         android:text="@string/go_back"
+        android:onClick="back"
         app:layout_constraintStart_toStartOf="@id/male_card_view"
         app:layout_constraintTop_toBottomOf="@id/male_card_view" />
 
@@ -103,6 +105,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
         android:text="@string/go_forward"
+        android:onClick="next"
         app:layout_constraintStart_toEndOf="@id/return_button"
         app:layout_constraintTop_toTopOf="@id/return_button" />
 
