--- a/app/src/main/res/layout/activity_pet_list.xml
+++ b/app/src/main/res/layout/activity_pet_list.xml
@@ -32,6 +32,7 @@
             android:layout_width="136dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
+            android:onClick="addPet"
             android:text="@string/add" />
 
         <include layout="@layout/bottom_menu" />
@@ -68,6 +69,7 @@
         android:layout_marginTop="28dp"
         android:drawableTop="@drawable/baseline_add_24"
         android:text="@string/add_lower_case"
+        android:onClick="addPet"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
