feat: activities relacionadas ao bottom menu convertidas para fragment. diretórios Kotlin reorganizados

--- a/app/src/main/res/layout/activity_booking_confirmation.xml
+++ b/app/src/main/res/layout/activity_booking_confirmation.xml
@@ -202,6 +202,6 @@
         app:layout_constraintStart_toStartOf="@id/money_button"
         app:layout_constraintTop_toTopOf="@id/return_button" />
 
-    <include layout="@layout/bottom_menu" />
+    <include layout="@layout/activity_bottom_menu" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
