--- a/app/src/main/res/layout/activity_pet_selection.xml
+++ b/app/src/main/res/layout/activity_pet_selection.xml
@@ -98,6 +98,6 @@
 
     </RelativeLayout>
 
-    <include layout="@layout/bottom_menu" />
+    <include layout="@layout/activity_bottom_menu" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
