--- a/app/src/main/res/layout/activity_datetime_selection.xml
+++ b/app/src/main/res/layout/activity_datetime_selection.xml
@@ -87,6 +87,6 @@
 
     </RelativeLayout>
 
-    <include layout="@layout/bottom_menu" />
+    <include layout="@layout/activity_bottom_menu" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
