--- a/app/src/main/res/layout/activity_pet_name.xml
+++ b/app/src/main/res/layout/activity_pet_name.xml
@@ -70,6 +70,6 @@
         app:layout_constraintStart_toEndOf="@id/return_button"
         app:layout_constraintTop_toTopOf="@id/return_button" />
 
-    <include layout="@layout/bottom_menu" />
+    <include layout="@layout/activity_bottom_menu" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
