--- a/app/src/main/res/menu/menu_item.xml
+++ b/app/src/main/res/menu/menu_item.xml
@@ -2,31 +2,27 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/home_button"
+        android:id="@+id/home_nav"
         android:icon="@drawable/baseline_home_24"
-        android:onClick="navigateToHome"
         android:title="@string/home" />
 
     <item
-        android:id="@+id/search_button"
+        android:id="@+id/search_nav"
         android:icon="@drawable/baseline_search_24"
         android:title="@string/search" />
 
     <item
-        android:id="@+id/my_pets_button"
+        android:id="@+id/my_pets_nav"
         android:icon="@drawable/baseline_pets_24"
-        android:onClick="navigateToMyPets"
         android:title="@string/mypets" />
 
     <item
-        android:id="@+id/calendar_button"
+        android:id="@+id/calendar_nav"
         android:icon="@drawable/baseline_calendar_month_24"
-        android:onClick="navigateToBookingList"
         android:title="@string/agenda" />
 
     <item
-        android:id="@+id/profile_button"
+        android:id="@+id/profile_nav"
         android:icon="@drawable/baseline_person_24"
-        android:onClick="navigateToProfile"
         android:title="@string/profile" />
 </menu>
