--- a/app/src/main/res/layout/fragment_pet_list.xml
+++ b/app/src/main/res/layout/fragment_pet_list.xml
@@ -84,9 +84,9 @@
         <androidx.cardview.widget.CardView
             android:id="@+id/pet_card_view_1"
             style="@style/default_card_view"
-            android:layout_width="360dp"
+            android:layout_width="match_parent"
             android:layout_height="72dp"
-            android:layout_marginStart="16dp"
+            android:layout_marginHorizontal="16dp"
             android:minHeight="72dp">
 
             <androidx.constraintlayout.widget.ConstraintLayout
