--- a/app/src/main/res/layout/petshop_item_adapter.xml
+++ b/app/src/main/res/layout/petshop_item_adapter.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent">
 
     <androidx.cardview.widget.CardView
-        android:id="@+id/pet_shop_card_view_1"
+        android:id="@+id/pet_shop_card_view"
         style="@style/default_card_view"
         android:layout_width="match_parent"
         android:layout_height="104dp"
