--- a/app/src/main/res/layout/fragment_pet_list.xml
+++ b/app/src/main/res/layout/fragment_pet_list.xml
@@ -73,59 +73,12 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <ScrollView
-        android:id="@+id/scroll_view"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recycler_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="56dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/section_title">
-
-        <androidx.cardview.widget.CardView
-            android:id="@+id/pet_card_view_1"
-            style="@style/default_card_view"
-            android:layout_width="match_parent"
-            android:layout_height="72dp"
-            android:layout_marginHorizontal="16dp"
-            android:minHeight="72dp">
-
-            <androidx.constraintlayout.widget.ConstraintLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-
-                <TextView
-                    android:id="@+id/pet_name_1"
-                    style="@style/default_pet_card_title"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="16dp"
-                    android:layout_marginTop="12dp"
-                    android:text="Fluffy"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
-
-                <TextView
-                    android:id="@+id/pet_info_1"
-                    style="@style/regular_text_view"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Cachorro, macho"
-                    app:layout_constraintStart_toStartOf="@id/pet_name_1"
-                    app:layout_constraintTop_toBottomOf="@id/pet_name_1" />
-
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="24dp"
-                    android:layout_marginEnd="8dp"
-                    android:src="@drawable/baseline_more_vert_24"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
-
-            </androidx.constraintlayout.widget.ConstraintLayout>
-
-        </androidx.cardview.widget.CardView>
-
-    </ScrollView>
+        app:layout_constraintTop_toBottomOf="@id/section_title" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
