--- a/app/src/main/res/layout/adapter_pet_item.xml
+++ b/app/src/main/res/layout/adapter_pet_item.xml
@@ -31,12 +31,12 @@
             app:layout_constraintTop_toBottomOf="@id/pet_name" />
 
         <ImageView
-            android:id="@+id/options_button"
+            android:id="@+id/delete_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="24dp"
             android:layout_marginEnd="8dp"
-            android:src="@drawable/baseline_more_vert_24"
+            android:src="@drawable/baseline_delete_24"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
